--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
-/*  your css code here. If applicable */
+body{
+	background-color:#f6f6f6;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height:100vh;
+}
+.left{
+	width:450px;
+	margin-top:70px;
+	display:inline-block;
+}
+.right{
+	dispaly:flex;
+	width:300px;
+	height:240px;
+	margin-inline:10px;
+	background-color:white;
+	padding:20px;
+	border-radius:5px;
+	box-shadow:0 0 10px #ccc;
+	flex-direction:column;
+	gap:10px;
+}
+input{
+	border:1px solid #ccc;
+	border-radius:5px;
+	padding:10px;
+	gap:10px;
+	width:40vh;
+}
+.btn{
+	background-color:#1877f2;
+	border-radius:5px;
+	padding:10px 20px;
+	color:white;
+	width:43vh;
+}
+a{
+	text-decoration:none;
+	color:#1877f2;
+}
+.signup{
+	background-color:green;
+	color:white;
+	border-radius:5px;
+	width:43vh;
+    padding:10px 20px;
+}
