--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-	background-color:#f6f6f6;
+	background-color:rgb(255,255,255);
 	display:flex;
 	justify-content:center;
 	align-items:center;
