--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ input{
 	padding:10px;
 	gap:10px;
 	width:40vh;
+	padding-top:10px;
 }
 .btn{
 	background-color:#1877f2;
@@ -35,10 +36,13 @@ input{
 	padding:10px 20px;
 	color:white;
 	width:43vh;
+	text-decoration:none;
+	padding-top:10px;
 }
 a{
 	text-decoration:none;
 	color:#1877f2;
+	padding-top:10px;
 }
 .signup{
 	background-color:green;
@@ -46,4 +50,6 @@ a{
 	border-radius:5px;
 	width:43vh;
     padding:10px 20px;
+	text-decoration:none;
+	padding-top:10px;
 }
