--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,15 @@ body{
 	align-items:center;
 	height:100vh;
 }
+.right{
+	margin-top:10px;
+}
 .left{
 	width:450px;
 	margin-top:70px;
 	display:inline-block;
 }
-.right{
+.form{
 	dispaly:flex;
 	width:300px;
 	height:240px;
